<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_name">游子吟血压</string>
    <string name="register_cloud">注册 ></string>
    <string name="back_2_records"> &#060; 返回 </string>
    <string name="register">注册</string>
    <string name="main_title">游子吟智能电子血压计</string>
    <string name="main_dad">某爸爸</string>
    <string name="main_mom">某妈妈</string>
    <string name="setting">设置</string>
    <string name="title_activity_add_record">添加一条记录</string>
    <string name="show_chart">显示图表</string>
    <string name="show_all_data">所有数据</string>
    <string name="add_record">添加记录</string>
    <string name="change_user">切换用户</string>
    <string name="save_record">保存 ></string>
    <string name="save_record_success">保存记录成功</string>
    <string name="save_record_fail">请填写所有信息！</string>
    <string name="title_activity_show_all_data">全部数据</string>
    <string name="title_activity_chart">健康趋势</string>
    <string name="chart_high">高压</string>
    <string name="chart_low">低压</string>
    <string name="title_template_step">Step 	<xliff:g id="step_number">%1$d</xliff:g>: LoremIpsu</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="title_activity_calling">Call Him/Her</string>
    <string name="title_activity_register">云端注册</string>
    <string name="net_unavailable">无法连接到互联网 :( </string>
    <string name="register_sucess">注册成功 </string>
    <string name="register_failed">注册失败 ，请重试 </string>
    <string name="set_wifi_failed">设置wifi信息失败</string>
    <string name="title_activity_user_edit">用户设置</string>
    <string name="more">...</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="scan_tips">对准二维码图片</string>
    <string name="scan_tips_registing">注册中，请稍候</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_records">RecordsActivity</string>
    <string name="s_view_btn">more</string>
    <string name="chart_10">10 天</string>
    <string name="chart_30">30 天</string>
    <string name="chart_all">一年</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_device_searching">DeviceSearchingActivity</string>
    <string name="title_activity_searching">SearchingActivity</string>
    <string name="title_activity_wifi_input">WifiInputActivity</string>
    <string name="title_activity_user_name_edit">UserNameEditActivity</string>
    <string name="title_activity_user_age_edit">UserAgeEditActivity</string>
    <string name="user1_default_name">爸爸</string>
    <string name="user2_default_name">妈妈</string>
    <string name="edit_user_name">用户名修改</string>
    

</resources>