<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/change_user"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/change_user"/>
    <item
        android:id="@+id/add_record"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add_record"/>
    <item
        android:id="@+id/show_chart"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/show_chart"/>
    <item
        android:id="@+id/show_all_data"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/show_all_data"/>

    <item
        android:id="@+id/action_previous"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_previous"
        android:visible="false"/>
</menu>